k8s/manifest_zipkin.yaml
kind: List
metadata: {}
resourceVersion: ""
selfLink: ""
apiVersion: v1

items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    generation: 1
    labels:
      run: zipkin
      app: zipkin
    name: zipkin
    selfLink: /oapi/v1/namespaces//deploymentconfigs/zipkin
  spec:
    replicas: 1
    selector:
      run: zipkin
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          run: zipkin
          app: zipkin
      spec:
        containers:
        - image: openzipkin/zipkin
          imagePullPolicy: Always
          name: zipkin
          ports:
          - containerPort: 9411
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0


- apiVersion: v1
  kind: Service
  metadata:
    labels:
      run: zipkin
      app: zipkin
    name: zipkin
  spec:
    ports:
    - port: 9411
      protocol: TCP
      targetPort: 9411
    selector:
      run: zipkin
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}


- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: zipkin
    labels:
      run: zipkin
    name: zipkin
  spec:
    host: zipkin-myproject.192.168.99.100.nip.io
    port:
      targetPort: 9411
    to:
      kind: Service
      name: zipkin
      weight: 100
    wildcardPolicy: None
  status:
    ingress: []
